<resources>
    <string name="app_name">EcoLegend</string>
    <string name="action_settings">Settings</string>
    <string name="user_level">15</string>

    <string name="carbonfootprintlabel">CARBON FOOTPRINT</string>
    <string name="button1text">LET\'S GET STARTED</string>
    <string name="info1">The average person in the United States produces more than 25 tons of carbon dioxide a year...</string>
    <string name="info2">That\'s equal to</string>
    <string name="info3">58,000 miles</string>
    <string name="info4">14,000 burgers</string>
    <string name="info5">300,000 smartphone ch.?</string>
    <string name="info6">Welcome, EcoApprentice</string>
    <string name="info7">You are on the first step to becoming an EcoLegend changing that number</string>

    <string name="initquiztitle">Initial Quiz</string>
    <!--
    <string name="initquizq2"></string>
    <string name="initquizq2"></string>
    <string name="initquizq2"></string>
    -->

    <string name="homequizq1">In what kind of setting do you live?</string>
    <string-array name="housetype">
        <item>Single Family Home</item>
        <item>Apartment Building (2 to 4 units)</item>
        <item>Apartment Building (&gt;5 units)</item>
        <item>Mobile Home</item>
    </string-array>

    <string name="homequizq2">How big is your home?</string>
    <string-array name="housesize">
        <item>less than 1000 sq ft</item>
        <item>1000-2000 sq ft</item>
        <item>2000-3000 sq ft</item>
        <item>3000-4000 sq ft</item>
        <item>more than 4000 sq ft</item>
    </string-array>

    <string name="homequizq3">How many people live in your household?</string>
    <string name="homequizq4">Check all sources of energy you use in your home:</string>
    <string name="homequizq5">How much natural gas does your household consume?</string>
    <string name="homequizq6">How much electricity does your household consume?</string>
    <string name="homequizq7">How much fuel oil does your household consume?</string>
    <string name="homequizq8">How much propane does your household consume?</string>
    <string name="homequizq9">Which of the following best describes your dietary habits?</string>
    <string-array name="diettype">
        <item>meat lover</item>
        <item>average omnivorous</item>
        <item>no beef</item>
        <item>vegetarian</item>
        <item>vegan</item>
    </string-array>

    <string name="homequizq10">Do you regularly recycle?</string>

    <string name="transquizq1">Which of the following modes of transportation do you primarily use?</string>
    <string name="transquizq2">How many vehicles do you own?</string>
    <string name="transquizq3">Are your vehicles electric?</string>
    <string name="transquizq4">What is your average mileage for each vehicle?</string>
    <string-array name="mileageopt">
        <item>less than 1000 miles</item>
        <item>1000-5000 miles</item>
        <item>5000-15000 miles</item>
        <item>15000-30000 miles</item>
        <item>more than 30000 miles</item>
    </string-array>

    <string name="transquizq5">What is the average fuel economy of your vehicles?</string>
    <string name="transquizq6">How often do you use transit?</string>
    <string name="transquizq7">How often do you use a bus?</string>
    <string name="transquizq8">Have you flown in the past year?</string>
    <string name="transquizq9">How many small round trip flights have you taken in the past year? (&lt;1 hour)</string>
    <string name="transquizq10">Medium? (1-4 hours)</string>
    <string name="transquizq11">Long? (&gt;4 hours)</string>
    <string name="transquizq12">How many nights have you spent in a hotel in the past year?</string>

    <string-array name="carType">
        <item>Not Driving Today</item>
        <item>Normal Car</item>
        <item>Hybrid Car</item>
        <item>Electric Car</item>
    </string-array>

    <string-array name="publicType">
        <item>Not Using Public Transportation Today</item>
        <item>Train</item>
        <item>Bus</item>
        <item>Plane</item>
    </string-array>

</resources>
