<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InitQuizActivity"
    tools:showIn="@layout/activity_initquiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="409dp"
            android:layout_height="673dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/homequizq1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homequizq1" />

                <Spinner
                    android:id="@+id/housetype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/homequizq2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homequizq2" />

                <Spinner
                    android:id="@+id/housesize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/homequizq3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homequizq3" />

                <EditText
                    android:id="@+id/housenump"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="enter a number between 1 and 10"
                    android:inputType="number"
                    android:numeric="integer"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/homequizq4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homequizq4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/naturalgas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="natural gas" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/electricity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="electricity" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/fuel oil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="fuel oil" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/propane"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="propane" />
                </LinearLayout>

                <TextView
                    android:id="@+id/homequizq5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homequizq5"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/amtnaturalgas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="enter amount in therms"
                        android:inputType="number"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="per month" />

                </LinearLayout>

                <TextView
                    android:id="@+id/homequizq6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homequizq6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/amtelectricity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="enter amount in mWh"
                        android:inputType="number"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="per month" />

                </LinearLayout>

                <TextView
                    android:id="@+id/homequizq7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homequizq7" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/amtfueloil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="enter amount in gallons"
                        android:inputType="number"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="per month" />

                </LinearLayout>

                <TextView
                    android:id="@+id/homequizq8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homequizq8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/amtpropane"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="enter amount in gallons"
                        android:inputType="number"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="per month" />

                </LinearLayout>

                <TextView
                    android:id="@+id/homequizq9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homequizq9" />

                <Spinner
                    android:id="@+id/diettype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/homequizq10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/homequizq10" />


                <com.google.android.material.chip.Chip
                    android:id="@+id/recycle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="yes" />

                <TextView
                    android:id="@+id/transquizq1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/car"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="car" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/transit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="transit" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/bus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="bus" />

                </LinearLayout>

                <TextView
                    android:id="@+id/transquizq2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq2" />

                <EditText
                    android:id="@+id/numcars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="enter a number between 1 and 5"
                    android:inputType="number"
                    android:numeric="integer"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/transquizq3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq3" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/electriccars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="yes" />

                <TextView
                    android:id="@+id/transquizq4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq4" />

                <TextView
                    android:id="@+id/transquizq5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq5" />

                <TextView
                    android:id="@+id/transquizq6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq6" />

                <TextView
                    android:id="@+id/transquizq7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq7" />

                <TextView
                    android:id="@+id/transquizq8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq8" />

                <TextView
                    android:id="@+id/transquizq9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq9" />

                <TextView
                    android:id="@+id/transquizq10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq10" />

                <TextView
                    android:id="@+id/transquizq11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="false"
                    android:text="@string/transquizq11"
                    android:textSize="14sp"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeTextType="none" />

                <TextView
                    android:id="@+id/transquizq12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq12" />

                <TextView
                    android:id="@+id/transquizq13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq13" />

                <TextView
                    android:id="@+id/transquizq14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transquizq14" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>